--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -13,15 +13,33 @@ GENERAL SETTINGS
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 /* Color */
+$white: #fff;
 $blue-green: #03DAC6;
+$grey: #F1F1F1;
+$dark-grey: #C4C4C4;
 
+.color-w{color: $white;}
+.color-dg{color: $dark-grey;}
 
-.bg-bg{
-  background-color: $blue-green; 
-} 
+.bg-bg{background-color: $blue-green;}
+.bg-g{background-color: $grey;}
+
+/* Dimension 
+.w-60{width: 60px;}
+.h-60{height: 60px;}*/
+
+/* Position */
+.txt-center{text-align: center;}
+.txt-left{text-align: left;}
+
+.mh-30{margin: 0 30px;}
 
 body {
   font-family: 'Open Sans', sans-serif;
+}
+
+body * {
+  box-sizing: border-box;
 }
 
 .App {
@@ -49,7 +67,7 @@ a {
   > div {
     display: inline-block;
     vertical-align: baseline;
-    width: 49%;
+    width: 25%;
     margin: 0 auto;
   }
 }
@@ -67,6 +85,27 @@ Link
   border: 2px solid #2196F3;
   border-radius: 2px;
   color: #0389f2;
+}
+
+/*
+Navigation
+*********/
+
+.nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  width: 100%;
+}
+
+.icon{
+  color: $dark-grey;
+}
+
+.link:hover > .icon{
+  color: $blue-green;
 }
 
 /*
@@ -112,23 +151,18 @@ Button Rond
 
 .btn-rond {
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border-radius: 50px;
-  background-color: red;
 }
 
-/*
-Button Like
-*********/
+.btn-rond.like {
+  padding: 12px 0;
+}
 
-
-
-
-
-/*
-Button DisLike
-*********/
+.btn-rond.dislike {
+  padding: 13px 0;
+}
 
 /*
 Input
@@ -145,37 +179,56 @@ input {
   background-color: transparent;
 }
 
-/*.App {
-  text-align: center;
+/*
+User img
+*********/
+
+.user-img {
+  width: 100%;
+  height: 60vh;
+  background-image: url(../img/userPicture.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+/*
+User bio
+*********/
+
+.bio {
+  width: 90%;
+  margin: 10px 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*
+User tag
+*********/
+
+.tag-container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.tag {
+  position: relative;
+  min-width: 80px;
+  min-height: 29px;
+  padding: 10px 16px 2px 45px;
+  margin: 5px 2px;
+  border: 1px solid #C4C4C4;
+  border-radius: 25px;
+  text-align: right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tagImg {
+  display: inline-block;
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 33px;
+  height: 33px;
+  background-image: url(../img/travel_tag.gif);
+  background-size: contain;
 }
-*/
