--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -10,13 +10,16 @@ GENERAL SETTINGS
   font-style: normal;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
 
 /* Color */
 $white: #fff;
 $blue-green: #03DAC6;
 $grey: #F1F1F1;
 $dark-grey: #C4C4C4;
+$txt-color: #7b7b7b;
+$online: #1AF816;
+$offline: #F81616;
 
 .color-w{color: $white;}
 .color-dg{color: $dark-grey;}
@@ -32,7 +35,10 @@ $dark-grey: #C4C4C4;
 .txt-center{text-align: center;}
 .txt-left{text-align: left;}
 
+.pos-rel {position: relative;}
+
 .mh-30{margin: 0 30px;}
+
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -68,7 +74,6 @@ a {
     display: inline-block;
     vertical-align: baseline;
     width: 25%;
-    margin: 0 auto;
   }
 }
 
@@ -102,6 +107,7 @@ Navigation
 
 .icon{
   color: $dark-grey;
+  font-size: 1.2em;
 }
 
 .link:hover > .icon{
@@ -151,6 +157,7 @@ Button Rond
 
 .btn-rond {
   display: block;
+  margin: 0 auto;
   width: 60px;
   height: 60px;
   border-radius: 50px;
@@ -180,15 +187,60 @@ input {
 }
 
 /*
+User content
+*********/
+
+.browse, .infos-container{
+  height: 100vh;
+}
+
+/*
 User img
 *********/
 
 .user-img {
   width: 100%;
-  height: 60vh;
+  height: 58vh;
   background-image: url(../img/userPicture.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+/*
+User info
+*********/
+
+.nav-user {
+  position: absolute;
+  top: 0;
+  right: 0;
+  > * {
+    display: inline-block;
+    width: 30%;
+  }
+}
+
+.rond {
+  width: 13px;
+  height: 13px;
+  background-color: $online;
+  border-radius: 13px;
+}
+
+.main-infos {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin: 0 auto;
+  z-index: 100;
+  color: #fff;
+}
+
+.main-infos h2{
+  margin: 10px;
+  font-family: "Meyrin";
+  font-size: 90px;
 }
 
 /*
@@ -198,6 +250,7 @@ User bio
 .bio {
   width: 90%;
   margin: 10px 20px;
+  color: $txt-color;
 }
 
 /*
@@ -205,10 +258,10 @@ User tag
 *********/
 
 .tag-container {
-  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  overflow-y: scroll;
 }
 
 .tag {
@@ -217,7 +270,8 @@ User tag
   min-height: 29px;
   padding: 10px 16px 2px 45px;
   margin: 5px 2px;
-  border: 1px solid #C4C4C4;
+  background-color: #03dac61f;
+  color: $blue-green;
   border-radius: 25px;
   text-align: right;
 }
@@ -227,8 +281,9 @@ User tag
   position: absolute;
   top: 1px;
   left: 0;
-  width: 33px;
-  height: 33px;
-  background-image: url(../img/travel_tag.gif);
+  width: 32px;
+  height: 32px;
+  border-radius: 32px;
+  background-image: url(../img/tag-travel.png);
   background-size: contain;
 }
