--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -308,7 +308,7 @@ User tag
   flex-wrap: wrap;
   overflow-y: scroll;
   height: 89px;
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
 }
 
 .tag {
