Fix tags height

--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -315,6 +315,7 @@ User tag
   position: relative;
   min-width: 80px;
   min-height: 29px;
+	max-height: 35px;
   padding: 10px 16px 4px 45px;
   margin: 5px 2px;
   background-color: #03dac61f;
