--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -203,7 +203,7 @@ input {
   padding: 5px 10px;
   border: 2px solid #2196F3;
   border-radius: 3px;
-  color: #fff; 
+  //color: #fff; 
   background-color: transparent;
 }
 
