Restructure scss files

--- a/front/src/components/App/App.scss
+++ b/front/src/components/App/App.scss
@@ -1,126 +1,4 @@
-/*
-GENERAL SETTINGS
-*********/
-
-@font-face {
-  font-family: "Meyrin";
-  src: url("../../font/formats/Meyrin.woff");
-  src: url("../../font/formats/Meyrin.woff") format("woff"), url("../../font/formats/Meyrin.ttf") format("ttf"), url("../../font/formats/Meyrin.svg") format("svg"), url("../../font/formats/Meyrin.eot") format("eot"),  url("../../font/formats/Meyrin.sfd") format("sfd"),;
-  font-weight: normal;
-  font-style: normal;
-}
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
-
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
-}
-
-$f-base : 1.3em;
-$f-m : 1.2em;
-$f-l : 1.5em;
-$f-xxl : 7em;
-
-.f-base {font-size: $f-base;}
-.f-xs {font-size: 0.8em;}
-.f-s {font-size: 0.9em;}
-.f-m {font-size: 1.2em;}
-.f-l {font-size: $f-l;}
-.f-xl {font-size: 1.6em;}
-.f-xxl {font-size: $f-xxl;}
-
-$semi-b : 600;
-
-.semi-b {font-weight: $semi-b;}
-
-/* Color */
-$white: #fff;
-$blue-green: #03DAC6;
-$grey: #F1F1F1;
-$dark-grey: #C4C4C4;
-$txt-color: #7b7b7b;
-$online: #1AF816;
-$offline: #F81616;
-
-.color-w{color: $white;}
-.color-dg{color: $dark-grey;}
-
-.bg-bg{background-color: $blue-green;}
-.bg-g{background-color: $grey;}
-
-/* Dimension 
-.w-60{width: 60px;}
-.h-60{height: 60px;}*/
-.w-100 {width: 100%;}
-
-/* Position */
-.txt-center{text-align: center;}
-.txt-left{text-align: left;}
-
-.pos-rel {position: relative;}
-
-.mh-30{margin: 0 30px;}
-.mb-5{margin-bottom: 5px;}
-
-body * {
-  box-sizing: border-box;
-}
-
-.App {
-  text-align: center;
-  height: 100vh;
-}
-
-h1 {
-  margin: 0;
-  font-family: "Meyrin";
-  font-size: 7em;
-  color: #fff;
-}
-
-a {
-  text-decoration: none;
-}
-
-.bg-desc {
-  background-image: linear-gradient(rgba(3, 218, 198, 1), rgba(3, 218, 198, 0));
-}
-
-.valign {
-  width: 100%;
-  > div {
-    display: inline-block;
-    vertical-align: baseline;
-    width: 25%;
-  }
-}
-
-/* Banner */
-.banner{
-  width: 90%;
-  height: auto;
-  margin: 0 auto;
-  padding: 5px;
-  background-color: $blue-green;
-  color: $white;
-  border-radius: 5px;
-  font-weight: $semi-b;
-  font-size: 1.1em;
-  animation-duration: 3s;
-  animation-name: appear;
-}
-
-@keyframes appear {
-  from {
-    opacity: 0; 
-  }
-  to {
-    opacity: 1; 
-  }
-}
-
+@import '../../global';
 
 /*
 Link
@@ -134,50 +12,6 @@ Link
   border: 2px solid #2196F3;
   border-radius: 2px;
   color: #0389f2;
-}
-
-/*
-Navigation
-*********/
-
-.nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 40px;
-  width: 100%;
-}
-
-.icon{
-  color: $dark-grey;
-  font-size: $f-l;
-}
-
-.link:hover > .icon{
-  color: $blue-green;
-}
-
-/*
-Start
-*********/
-
-.start{
-  height: 70vh;
-  padding: 18vh 0 0;
-}
-
-.start > div {
-  margin: 10vh auto;
-}
-
-/*
-Login
-*********/
-
-.signup, .login {
-  height: 70vh;
-  padding: 18vh 0 0;
 }
 
 /*
@@ -227,136 +61,6 @@ input {
   padding: 5px 10px;
   border: 2px solid #2196F3;
   border-radius: 3px;
-  //color: #fff; 
+  //color: #fff;
   background-color: transparent;
-}
-
-/*
-User content
-*********/
-
-.browse, .infos-container{
-  height: 100vh;
-}
-
-.browse {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-  .infos-container {
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex-basis: 100%;
-  }
-}
-
-/*
-User img
-*********/
-
-.user-img {
-  width: 100%;
-  height: 58vh;
-  background-image: url(../../img/userPicture.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/*
-User info
-*********/
-
-.nav-user {
-  position: absolute;
-  top: 5px;
-  right: 4px;
-  > * {
-    display: inline-block;
-    width: 33%;
-  }
-}
-
-.icon-top {
-  margin-left: 5px;
-  color: #fff;
-  font-size: $f-base;
-  font-weight: $semi-b;
-}
-
-.rond {
-  width: 13px;
-  height: 13px;
-  background-color: $online;
-  border-radius: 13px;
-  float: right;
-  margin-right: 5px;
-}
-
-.main-infos {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  margin: 0 auto;
-  z-index: 100;
-  color: #fff;
-}
-
-.main-infos h2{
-  margin: 10px;
-  font-family: "Meyrin";
-  font-size: 7em;
-  margin-bottom: 0;
-  margin-block-end: 0;
-}
-
-/*
-User bio
-*********/
-
-.bio {
-  width: 90%;
-  margin: 10px 20px;
-  color: $txt-color;
-  font-size: $f-base;
-}
-
-/*
-User tag
-*********/
-
-.tag-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  overflow-y: scroll;
-  height: 89px;
-  //margin-bottom: 20px;
-}
-
-.tag {
-  position: relative;
-  min-width: 80px;
-  min-height: 29px;
-	max-height: 35px;
-  padding: 10px 16px 4px 45px;
-  margin: 5px 2px;
-  background-color: #03dac61f;
-  color: $blue-green;
-  border-radius: 25px;
-  text-align: right;
-  font-size: $f-m;
-}
-
-.tagImg {
-  display: inline-block;
-  position: absolute;
-  top: 1px;
-  left: 0;
-  width: 32px;
-  height: 32px;
-  border-radius: 32px;
-  background-image: url(../../img/tag-travel.png);
-  background-size: contain;
 }
