--- a/front/src/components/UserProfile/UserProfile.scss
+++ b/front/src/components/UserProfile/UserProfile.scss
@@ -8,12 +8,14 @@
 User img
 *********/
 
+.img-container{
+  height: 58vh;
+}
+
 .user-img {
   width: 100%;
   height: 58vh;
-  background-image: url(../../img/userPicture.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  object-fit: cover;
 }
 
 /*
@@ -110,6 +112,6 @@ User tag
   width: 32px;
   height: 32px;
   border-radius: 32px;
-  background-image: url(../../img/tag-travel.png);
+  //background-image: url(../../../public/img/tag-travel.png);
   background-size: contain;
 }
