--- a/front/src/components/App/App.scss
+++ b/front/src/components/App/App.scss
@@ -29,6 +29,18 @@ button {
   background-color: transparent;
 }
 
+button.pref{
+  display: block;
+  width: 39%;
+  margin: 10px auto;
+  padding: 15px;
+  border: 2px solid #E100505F;
+  border-radius: 30px;
+  color: #e10050;
+  background-color: #E100505F;
+  font-size: 1.2em;
+}
+
 /*
 Button Rond
 *********/
@@ -48,6 +60,30 @@ Button Rond
 
 .btn-rond.dislike {
   padding: 13px 0;
+}
+
+.btn-rond.pref{
+  padding: 18px 10px 10px;
+  position: absolute;
+  top: 54vh;
+  right: 7px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
+}
+
+.btn-rond.more{
+  padding: 20px 10px;
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
+}
+
+.btn-rond.image{
+  padding: 18px 10px;
+  position: absolute;
+  top: 10px;
+  right: 7px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
 }
 
 /*
