Add toggle buttons to /history

--- a/front/src/components/History/History.scss
+++ b/front/src/components/History/History.scss
@@ -7,3 +7,11 @@ h2 {
 .history {
   padding: 20px 25px !important;
 }
+
+.history-sections {
+  display: flex;
+  flex-direction: row;
+}
+
+.action {
+}
