--- a/front/src/global.scss
+++ b/front/src/global.scss
@@ -12,7 +12,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
 
-
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
@@ -46,6 +45,7 @@ $online: #1AF816;
 $offline: #F81616;
 
 .color-w{color: $white;}
+.color-r{color: $red;}
 .color-dg{color: $dark-grey;}
 
 .bg-bg{background-color: $blue-green;}
@@ -110,4 +110,10 @@ a {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
   }
+}
+
+.txt-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
