--- a/front/src/components/App/App.scss
+++ b/front/src/components/App/App.scss
@@ -96,6 +96,7 @@ input {
   margin: 10px auto;
   padding: 5px 10px;
   border: 2px solid #2196F3;
+  outline: none;
   border-radius: 3px;
   //color: #fff;
   background-color: transparent;
