--- a/front/src/components/Nav/Nav.scss
+++ b/front/src/components/Nav/Nav.scss
@@ -9,8 +9,10 @@ Navigation
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 100;
   height: 40px;
   width: 100%;
+  background-color: white;
 }
 
 .icon{
