imporved slideshow and WIP: notifications in EVERY PAGES

--- a/front/src/global.scss
+++ b/front/src/global.scss
@@ -50,6 +50,8 @@ $liked: #f7e294;
 .color-r{color: $red;}
 .color-liked{color: $liked;}
 .color-dg{color: $dark-grey;}
+.color-bg{color: $blue-green;}
+.color-arrow{color: #ccc;}
 
 .bg-bg{background-color: $blue-green;}
 .bg-g{background-color: $grey;}
