--- a/front/src/components/Profile/Profile.scss
+++ b/front/src/components/Profile/Profile.scss
@@ -154,7 +154,6 @@ User tag
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f9f9f9;
   border-radius: 50%;
   cursor: pointer;
   transition: transform ease-in .1s;
@@ -163,7 +162,7 @@ User tag
 .nextArrow {
   position: absolute;
   top: 50%;
-  right: 25px;
+  right: 0;
   z-index: 999;
   color: #fff;
 }
@@ -171,7 +170,7 @@ User tag
 .backArrow {
   position: absolute;
   top: 50%;
-  left: 25px;
+  left: 0;
   z-index: 999;
   color: #fff;
 }
