--- a/front/src/components/App/App.scss
+++ b/front/src/components/App/App.scss
@@ -65,8 +65,9 @@ Button Rond
 .btn-rond.pref{
   padding: 18px 10px 10px;
   position: absolute;
-  top: 54vh;
-  right: 7px;
+  bottom: 9px;
+  right: 9px;
+  z-index: 1000;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
 }
 
