--- a/front/src/components/Nav/Nav.scss
+++ b/front/src/components/Nav/Nav.scss
@@ -32,9 +32,10 @@ Navigation
     background-color: white;
     padding-top: 24px;
     border-top: 1px solid #ccc;
+    z-index: 10000;
   }
 
-  .icon {
+  .nav .icon {
     font-size: 2.5em;
     margin: 0 60px;
   }
