--- a/front/src/components/History/History.scss
+++ b/front/src/components/History/History.scss
@@ -33,7 +33,7 @@ h2 {
   text-align: left;
 }
 
-@media (min-width: $tablet) { 
+@media (min-width: $tabletLandscape) { 
   h2 {
     font-size: 2.5em;
   }
