--- a/front/src/components/Preferences/Preferences.scss
+++ b/front/src/components/Preferences/Preferences.scss
@@ -37,7 +37,7 @@ h2{
   font-size: 1em;
 }
 
-@media (min-width: $tablet) { 
+@media (min-width: $tabletLandscape) { 
   .settings{
     width: 50%;
     margin: 0 auto;
