--- a/front/src/components/ProfileImages/ProfileImages.scss
+++ b/front/src/components/ProfileImages/ProfileImages.scss
@@ -63,7 +63,7 @@ h2{
   opacity: 0;
 }
 
-@media (max-width: $tablet) { 
+@media (max-width: $tabletLandscape) { 
   .fadein {
     margin: 0 auto;
   }
