--- a/front/src/components/Nav/Nav.scss
+++ b/front/src/components/Nav/Nav.scss
@@ -21,11 +21,31 @@ Navigation
   margin: 0 30px;
 }
 
-.link:hover > .icon{
+.link:hover .icon{
   color: $blue-green;
 }
 
-@media (min-width: $tablet) { 
+#notif-icon{
+  position: relative;
+}
+
+#notif-icon > span {
+  position: absolute;
+  bottom: 11px;
+  right: 17px;
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background-color: #e10050;
+  border-radius: 10px;
+  text-align: center;
+  padding: 0;
+  color: white;
+  font-weight: 700;
+}
+
+
+@media (min-width: $tabletLandscape) { 
 
   .nav {
     height: 80px;
@@ -40,4 +60,11 @@ Navigation
     margin: 0 60px;
   }
 
+  #notif-icon > span{
+    bottom: 15px;
+    right: 52px;
+    width: 17px;
+    height: 17px;
+    padding: 0;
+  }
 }
