--- a/front/src/components/Banner/Banner.scss
+++ b/front/src/components/Banner/Banner.scss
@@ -3,7 +3,7 @@
 .banner {
   width: 90%;
   height: auto;
-  margin: 0 auto;
+  margin: 12vh auto 0;
   padding: 15px 10px;
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.25);
   background-color: $blue-green;
