--- a/front/src/components/Nav/Nav.scss
+++ b/front/src/components/Nav/Nav.scss
@@ -49,9 +49,9 @@ Navigation
 
   .nav {
     height: 80px;
-    background-color: white;
+    background-color: #03dac626;
     padding-top: 24px;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #03dac626;
     z-index: 10000;
   }
 
