--- a/front/src/components/Profile/Profile.scss
+++ b/front/src/components/Profile/Profile.scss
@@ -180,10 +180,10 @@ User tag
 }
 
 @media (min-width: $tabletLandscape) { 
-  .App{
-    background-image: linear-gradient(rgba(3, 218, 198, 0) 58%, #03dac685);
+  // .App{
+  //   background-image: linear-gradient(rgba(3, 218, 198, 0) 58%, #03dac685);
 
-  }
+  // }
 
   .infos-container-my-profile, .infos-container {
     width: 40%;
