--- a/front/src/components/History/History.scss
+++ b/front/src/components/History/History.scss
@@ -9,6 +9,10 @@ h2 {
   padding: 20px 25px !important;
 }
 
+.history-container{
+  margin-bottom: 50px;
+}
+
 .history-sections {
   display: flex;
   flex-direction: row;
@@ -40,6 +44,7 @@ h2 {
   .history-container{
     width: 50%;
     margin: 0 auto;
+    margin-bottom: 80px;
   }
   .history-sections > a{
     font-size: 2.5em;
