--- a/front/src/components/Nav/Nav.scss
+++ b/front/src/components/Nav/Nav.scss
@@ -10,9 +10,10 @@ Navigation
   left: 0;
   right: 0;
   z-index: 100;
-  height: 40px;
+  height: 50px;
   width: 100%;
-  background-color: white;
+  padding-top: 10px;
+  background-color: #69e8dd;
 }
 
 .icon{
@@ -49,7 +50,7 @@ Navigation
 
   .nav {
     height: 80px;
-    background-color: #03dac626;
+    background-color: #69e8dd;
     padding-top: 24px;
     border-top: 1px solid #03dac626;
     z-index: 10000;
