--- a/front/src/components/Profile/Profile.scss
+++ b/front/src/components/Profile/Profile.scss
@@ -37,7 +37,7 @@ User info
 .icon-top {
   margin-left: 5px;
   color: #fff;
-  font-size: $f-base;
+  font-size: 0.8em;
   font-weight: $semi-b;
 }
 
