--- a/front/src/components/Browse/Browse.scss
+++ b/front/src/components/Browse/Browse.scss
@@ -18,6 +18,32 @@ Browse
 
 .browse > div {width:100%;}
 
+.button-submit.fetch-more{
+  display: block;
+    width: 30%;
+    padding: 15px 10px;
+    border: 2px solid #03dac6;
+    border-radius: 26px;
+    color: #fff;
+    font-weight: bold;
+    background-color: #02d9c6;
+  margin-bottom: 100px;
+}
+
+.filter-submit{
+    /* display: inline-block; */
+    width: 109%;
+    margin-left: 20px;
+    /* margin: 10px auto; */
+    padding: 15px 10px;
+    /* border: 2px solid #2196F3; */
+    border-radius: 24px;
+    color: #fff;
+    font-weight: bold;
+    background-color: #03dac6;
+    vertical-align: top;
+}
+
 @media (min-width: $tabletLandscape) { 
   .browse {
     flex-wrap: wrap;
